# rrng

./: .gitignore  LICENSE  README.md  USAGE.md  __init__.py  _core.py  _dist.py  _qnorm.py  _sample.py  pyproject.toml
.github/workflows/: publish.yml
examples/: r_dump_vectors.R  r_validate_single.R  validate_bootstrap.py
tests/: generate_golden.R  test_rrng.py
tests/fixtures/: golden_vectors.json
